# videos

./: .gitignore  README.md
.qoder/quests/: downloader-refactoring-report.md  feature-expansion-analysis.md  feature-module-extraction.md  three-project-list.md
app/downloader/: .gitignore  QUICKSTART.md  __init__.py  fix_concurrent_merge.py  index.py  pyproject.toml  run_advanced_cli.py  run_cli.py
app/downloader/cli/: __init__.py  advanced_cli.py  cli.py
app/downloader/core/: __init__.py  advanced_downloader.py  config.py  crypto.py  download.py  download_handler.py  downloader.py  json_loader.py  merge_files.py  merge_handler.py  parser.py  progress.py  stream_manager.py  task_processor.py  thread_safe_merge.py  utils.py
app/downloader/docs/: CONCURRENT_FFMPEG_ANALYSIS.md  CONCURRENT_MERGE_GUIDE.md  README.md  SOLUTION_SUMMARY.md  USAGE.md
app/downloader/examples/: concurrent_merge_example.py  demo.py  example_usage.py  tasks.example.json  tasks.example1.json
app/downloader/tests/: __init__.py  test_advanced.py  test_basic.py  test_progress.py
app/server/: .gitignore  Cargo.toml  README.md
app/server/src/: main.rs  models.rs
app/server/src/routes/: mod.rs  task_handlers.rs  video_handlers.rs  watcher_handlers.rs
app/server/src/services/: db.rs  ffmpeg.rs  filesystem.rs  mod.rs  task_queue.rs
app/server/src/services/db/: connection.rs  mod.rs  schema.rs  sync.rs  tree.rs  video_dao.rs  watcher.rs
app/server/src/utils/: common.rs  duration.rs  logger.rs  m3u8.rs  mod.rs  thumbnail.rs
app/server/static/: index.html  script.js  style.css
app/web/: IMPLEMENTATION.md  (+7 more)
(+100 files in other folders)
