[project]
name = "m3u8-downloader"
version = "2.2.0"
description = "M3U8 Downloader Pro - 高性能M3U8视频下载器，支持AES-128加密流"
requires-python = ">=3.7"
dependencies = ["requests>=2.25.0", "tqdm>=4.60.0", "pycryptodome>=3.15.0"]

[project.scripts]
m3u8-cli = "downloader.cli.cli:main"
m3u8-advanced-cli = "downloader.cli.advanced_cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["downloader", "downloader.cli", "downloader.core"]
package-dir = { "downloader" = "." }
