[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.12.2"
chrono = "0.4.42"
notify = "6.1"
log = "0.4.29"
log4rs = "1.4.0"
nu-ansi-term = "0.50.3"
anyhow = "1.0.100"
rayon = "1.11.0"
